--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,7 @@
 
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-      var socket = io();
-
-      socket.on('connect', () => {
-        console.log('connected to server');
-      })
-
-      socket.on('disconnect', () => {
-        console.log('disconnect to server');
-      } )
-
-    </script>
+    <script src="/js/index.js"></script>
 
   </body>
 </html>
