--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,15 @@
   <body>
     <p>Welcome to the chat app</p>
 
+    <ol id="message"></ol>
+
+    <form id="message-form">
+      <input type="text" name="message" placeholder="Message" />
+      <button>Send</button>
+    </form>
 
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/lib/jquery-3.1.0.min.js"></script>
     <script src="/js/index.js"></script>
 
   </body>
